--- a/TredCharts1/styles.css
+++ b/TredCharts1/styles.css
@@ -55,13 +55,12 @@ section#topStrip span a:hover {
 header {
     display: flex;
     flex-direction: row;
-    margin: 2em 6%;
+    margin: 2em 8%;
     align-items: center;
-    margin-bottom: 3em;
     justify-content: space-between;
 }
 header img#headerLogo {
-    height: 20px;
+    height: 48px;
 }
 header nav {
     display: flex;
@@ -281,7 +280,7 @@ section#companies img {
 
 /* ABOUT PAGE CSS */
 body.otherPages {
-    background: url(images/basic_bg.png) no-repeat left top;
+    background: url(images/bg.png) no-repeat left top;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -309,7 +308,7 @@ footer #upperFooter {
     flex-direction: row;
     background-color: #14395b;
     color: white;
-    padding: 0 12%;
+    padding: 0 8%;
     padding-top: 3em;
     padding-bottom: 2em;
 }
@@ -375,7 +374,7 @@ footer #lowerFooter {
     background-color: #0b2f50;
     display: flex;
     flex-direction: row;
-    padding: 1em 12%;
+    padding: 1em 8%;
     color: white;
     font-size: 14px;
 }
