--- a/CrustPlay/styles.css
+++ b/CrustPlay/styles.css
@@ -391,19 +391,24 @@ section h3 {
         width: 18em;
     }
 }
-@media screen and (max-width: 1090px) {
-    .tournamentCard img {
-        width: 15em;
-    }
-}
 @media screen and (max-width: 1260px) {
     .tournamentCard img {
         width: 16em;
     }
 }
+@media screen and (max-width: 1090px) {
+    .tournamentCard img {
+        width: 14em;
+    }
+}
 @media screen and (max-width: 960px) {
     .tournamentCard img {
-        width: 13em;
+        width: 12em;
+    }
+}
+@media screen and (max-width: 780px) {
+    #recentTournaments {
+        display: none;
     }
 }
 
@@ -696,6 +701,7 @@ footer .socials a img:hover {
     justify-content: space-between;
     margin-top: 32px;
     flex-wrap: wrap;
+    gap: 24px;
 }
 .text {
     font-weight: 400;
@@ -709,6 +715,7 @@ footer .socials a img:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* margin: 0 24px; */
     margin-bottom: 40px;
 }
 #news .newsCard img {
@@ -736,7 +743,7 @@ footer .socials a img:hover {
 #news .newsCard a.readMore:hover {
     background-color: var(--black);
 }
-@media screen and (max-width: 1360px) {
+/* @media screen and (max-width: 1360px) {
     #news .newsCard img {
         width: 14em;
     }
@@ -755,7 +762,7 @@ footer .socials a img:hover {
     #news .newsCard img {
         width: 10em;
     }
-}
+} */
 
 #newsArticle {
     display: flex;
