--- a/CrustPlay/styles.css
+++ b/CrustPlay/styles.css
@@ -1153,6 +1153,7 @@ main.team img.bgImage {
         display: flex;
         flex-wrap: nowrap;
         width: 100%;
+        justify-content: space-between;
     }
     footer .discord {
         margin-bottom: 24px;
@@ -1174,5 +1175,11 @@ main.team img.bgImage {
     }
     #team {
         gap: 32px;
+    }
+    #getAwards span {
+        width: 100%;
+    }
+    #bottomCTA .left h2 {
+        font-size: 38px;
     }
 }
