--- a/CrustPlay/styles.css
+++ b/CrustPlay/styles.css
@@ -367,6 +367,7 @@ section h3 {
     display: flex;
     flex-direction: column;
 }
+
 .tournamentCard img {
     width: 22em;
 }
@@ -385,6 +386,28 @@ section h3 {
     font-weight: 600;
     font-size: 16px;
     line-height: 20px;
+}
+.tournamentCard .liveTag {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 6px;
+    border-radius: 10px;
+    padding: 4px 8px;
+    background-color: #f53838;
+    color: white;
+    position: absolute;
+    align-self: flex-end;
+    margin: 12px;
+}
+.tournamentCard .liveTag .circle {
+    width: 8px;
+    height: 8px;
+    background-color: white;
+    border-radius: 100%;
+}
+.tournamentCard .liveTag p {
+    font-size: 12px;
 }
 @media screen and (max-width: 1360px) {
     .tournamentCard img {
