--- a/mmunaf/styles.css
+++ b/mmunaf/styles.css
@@ -191,6 +191,30 @@ nav#mobile {
     }
 }
 
+@media screen and (max-width: 912px) {
+    nav#desktop {
+        padding: 0 60px;
+    }
+    section {
+        padding: 0 60px;
+    }
+    section#about {
+        flex-direction: column !important;
+        gap: 60px;
+    }
+    #contact .contactOuterContainer {
+        flex-direction: column !important;
+        gap: 48px;
+    }
+
+    #contact .contactOuterContainer .contactForm {
+        order: 1;
+    }
+    #contact .contactInfo {
+        order: 2;
+    }
+}
+
 section#hero {
     display: flex;
     align-items: center;
@@ -454,7 +478,7 @@ section#myProjects .seeAllProjectsBtn:hover {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.5px;
-    font-weight: 100;
+    font-weight: 400;
 }
 
 .projectTemplateButton {
@@ -467,12 +491,71 @@ section#myProjects .seeAllProjectsBtn:hover {
     width: max-content;
 }
 
+.projectTemplateWritten {
+    position: absolute;
+    top: 24px;
+    left: 24px;
+}
+
+.projectTemplatePicture {
+    /* padding: 24px; */
+    background-color: #e3e3e3;
+    border-radius: var(--basicRadius);
+    transition: 0.4s ease;
+    cursor: pointer;
+    width: 36vw;
+    height: auto;
+}
+.projectTemplatePicture:hover {
+    transform: scale(1.02);
+}
+
+.projects {
+    gap: 48px;
+}
+.projects .col {
+    display: flex;
+    flex-direction: column;
+    gap: 48px;
+}
+
+@media screen and (min-width: 1080px) {
+    .projectTemplatePicture {
+        width: 36vw;
+        padding-top: 24px;
+    }
+    .projects .col {
+        flex-wrap: nowrap !important;
+    }
+    .projects {
+        flex-wrap: nowrap !important;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .projectTemplatePicture {
+        width: 80vw;
+        padding-top: 24px;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .projectTemplatePicture {
+        width: 60vw;
+        padding-top: 24px;
+    }
+}
+
 @media screen and (max-width: 480px) {
     .projectTemplate {
         width: 72vw;
     }
     .projectTemplateImg {
         width: 72vw;
+    }
+    .projectTemplatePicture {
+        width: 90vw;
+        padding-top: 24px;
     }
 }
 
@@ -944,6 +1027,10 @@ section#projectDetails .catBtn:hover .catBtnText {
 }
 section#projectDetails .current {
     border-bottom: 2px solid var(--orange);
+    color: var(--orange);
+}
+section#projectDetails .current .catBtnText {
+    color: var(--orange);
 }
 section#projectDetails .projectCatSelector {
     display: flex;
