--- a/mmunaf/styles.css
+++ b/mmunaf/styles.css
@@ -673,7 +673,7 @@ section#contact {
 #contact .contactTitle {
     font-size: 62px;
     font-weight: 300;
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 #contact .contactOuterContainer {
     display: flex;
@@ -1180,4 +1180,23 @@ section#projectDetails .projectCatMobileSelector select {
 
 body::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
+}
+
+/* Text Animation */
+
+.hidden {
+    opacity: 0;
+}
+.console-container {
+    text-align: left;
+    display: block;
+    color: white;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+.console-underscore {
+    display: inline-block;
 }
