--- a/mmphotos/styles.css
+++ b/mmphotos/styles.css
@@ -15,6 +15,13 @@ body {
     justify-content: center;
     background-color: #2b2b2b;
 }
+.body {
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
 
 section#title {
     display: flex;
@@ -42,7 +49,7 @@ h2.sub {
     font-family: "Lato";
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 24px;
     display: flex;
     align-items: center;
@@ -54,7 +61,7 @@ h2.sub {
     color: #6b6b6b;
 }
 
-p.about {
+.about {
     font-family: "Lato";
     font-style: normal;
     font-weight: 300;
@@ -104,9 +111,90 @@ section#gallery #selector button.active {
     color: #2b2b2b;
 }
 section#gallery .photos {
+    /* display: flex;
+    flex-direction: row;
+    width: 100vw; */
+
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
 }
-section#gallery .photos img {
+/* section#gallery .photos .col {
+    display: flex;
+    flex-direction: column;
     width: 100%;
 }
+section#gallery .photos img {
+    width: 100%;
+} */
+section#gallery .photos img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+section#gallery .photos .photo {
+    position: relative;
+    transition: 0.3s ease;
+}
+section#gallery .photos .photo .imgHover {
+    transition: transform ease-out 0.3s;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
+    opacity: 0.4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 120px;
+    margin-bottom: 48px;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+}
+
+footer a.about {
+    text-decoration: none;
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 24px;
+    letter-spacing: 0.06em;
+    color: #eaeaea;
+    width: min-content;
+    opacity: 0.8;
+    margin-top: 48px;
+    margin-bottom: 40px;
+}
+
+footer p.para {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.06em;
+    margin-top: 56px;
+    color: #eaeaea;
+}
+
+/*.photo .imgHover {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: visibility 0.2s linear, opacity 0.2s linear;
+    -moz-transition: visibility 0.2s linear, opacity 0.2s linear;
+    -o-transition: visibility 0.2s linear, opacity 0.2s linear;
+}
+
+ .photo:hover {
+    visibility: visible;
+    opacity: 1;
+} */
